--- a/templates/base.html
+++ b/templates/base.html
@@ -82,10 +82,10 @@
         <div class="address top3">
             <p>DESSERT DECOR, UNION SQUARE, NEW YORK, NY, DESSERTDECOROFFICIAL@GMAIL.COM</p>
         </div>
-        <div class="instgram-addr">
+        <div class="instgram-addr bottom5">
             <p>Instagram:@dessertdecor_official</p>
         </div>
-        <ul class="bs-docs-footer-links top3">
+        <ul class="bs-docs-footer-links ">
             <li class="footer-menu"><a href="home">HOME</a></li>
             <li class="footer-menu">|</li>
             <li class="footer-menu"><a href="about">ABOUT</a></li>
@@ -96,6 +96,7 @@
             <li class="footer-menu">|</li>
             <li class="footer-menu"><a href="#">LOGIN</a></li>
         </ul>
+        <div class="empty-1"></div>
         <div class="empty-1"></div>
         <div class="empty-1"></div>
     </div>
