--- a/templates/cheese-cake.html
+++ b/templates/cheese-cake.html
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row bottom5">
         <div class="col-lg-7">
 
             <div class="shop-detail-left">
@@ -107,7 +107,10 @@
     <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
-                <img src="/static/img/cheese%20cake%20detail/_DSC3801.png">
+                <a href="/tips">
+                    <img src="/static/img/cheese%20cake%20detail/_DSC3801.png">
+                </a>
+
             </div>
         </div>
     </div>
