--- a/templates/flowers-cookies.html
+++ b/templates/flowers-cookies.html
@@ -14,7 +14,7 @@
         <div class="col-lg-4">
             <div class="purple">
                 <div class="row">
-                    <div class="col-sm-9 vertical-line description">
+                    <div class="col-sm-9 vertical-line description ">
                         <div class="description">Butter Koekje decoration kit</div>
                     </div>
                     <div class="col-sm-3">
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row bottom5">
         <div class="col-lg-7">
 
             <div class="shop-detail-left">
@@ -107,7 +107,10 @@
     <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
+
+                <a href="/tips">
                 <img src="/static/img/flowers%20cookies/5.png">
+                    </a>
             </div>
         </div>
     </div>
