--- a/templates/popcake.html
+++ b/templates/popcake.html
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row bottom5">
         <div class="col-lg-6">
 
             <div class="shop-detail-left">
@@ -105,7 +105,9 @@
     <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
+                <a href="/tips">
                 <img src="/static/img/popcake/5.png">
+                </a>
             </div>
         </div>
     </div>
