--- a/templates/home.html
+++ b/templates/home.html
@@ -19,23 +19,29 @@
     </div>
 </div>
 <div class="">
-    <div class="frame">
-        <img class="frame" src="/static/img/home/pic2.png">
+    <div class="frame2">
+        <div class="align-center">
+            <p class="bottom2">"THE HOT NEW TREND"</p>
+            <p class="bottom2">SELF-DECORATED DESSERT AS A GIFT?</p>
+            <p >YOU CAN DO IT!</p>
+        </div>
     </div>
 </div>
-<div class="align-center yy-content">
-    <div class="container sign-up">
-        <p><b>Sign up for DESSERT DECOR awesomeness!</b></p>
 
+<div class="align-center yy-content">
+    <div class="container sign-up top3 bottom2">
+        <div class="sign-up">
+            <p>Sign up for DESSERT DECOR awesomeness!</p>
+        </div>
     </div>
-    <div class="container ">
+    <div class="container bottom5 ">
         <div class="middle-panel">
-            <input type="text" class="email-zone" placeholder="Email address">
-            <button type="button" class="btn-yy" >Start</button>
+            <input type="text" class="email-zone2" placeholder="Email address">
+            <button type="button" class="btn-yy top1px" >Start</button>
         </div>
     </div>
 
-    <div class="narrow90">
+    <div class="narrow90 bottom2">
         <table>
             <tr>
                 <td>
