--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -12,19 +12,19 @@
 
     <div class="article-content">
         <p>
-            People just walking around in D12 and attracted by our decoration activity.  An example of my challenge: if one person received “banana, cookie, chicken and boring”, that means use banana, cookie and chicken to make a culinary art which looks boring (obviously the adjectives will need revising and making them more exciting and varied). Finally, about 20 people joined this cooking challenge game, most of them are cooking lovers, and I can tell from their Facebook page that they usually post pictures of their own cooking and culinary creations. The pictures they finally uploaded on my event page are very interesting and full of creative dishes. One person used 3 ingredients to form an old man’s face to represent boring and explain that his grandfather always told him some boring stories and was very stubborn, so that’s why he put all ingredients together to form grandpa’s face; Another one cut the plate and added several animal cookies to represent a playground, because a very well known structure in every playground is the marry-go-around, he tried to take this typical structure to represent the playground. I found out that people was very excited about this game, because there are a lot of comments on each pictures and even appreciative comments for each person’s creation. What’s more, there are also 2 people who were not usually cooking at home that still joined this game. They actually did this by using ingredients such as cookies and fruits that they can buy from grocery stores,  so that they don’t need actually ”cook” and they think this game is interesting and can make those snacks looks beautiful before eating them.
+            People just walking around in D12 and attracted by our decoration activity.  An example of my challenge: if one person received "banana, cookie, chicken and boring", that means use banana, cookie and chicken to make a culinary art which looks boring (obviously the adjectives will need revising and making them more exciting and varied). Finally, about 20 people joined this cooking challenge game, most of them are cooking lovers, and I can tell from their Facebook page that they usually post pictures of their own cooking and culinary creations. The pictures they finally uploaded on my event page are very interesting and full of creative dishes. One person used 3 ingredients to form an old man's face to represent boring and explain that his grandfather always told him some boring stories and was very stubborn, so that's why he put all ingredients together to form grandpa's face; Another one cut the plate and added several animal cookies to represent a playground, because a very well known structure in every playground is the marry-go-around, he tried to take this typical structure to represent the playground. I found out that people was very excited about this game, because there are a lot of comments on each pictures and even appreciative comments for each person's creation. What's more, there are also 2 people who were not usually cooking at home that still joined this game. They actually did this by using ingredients such as cookies and fruits that they can buy from grocery stores,  so that they don't need actually "cook" and they think this game is interesting and can make those snacks looks beautiful before eating them.
         </p>
         <table>
             <tr>
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/facebook/1.png">
                     </div>
                 </td>
 
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/facebook/2.png">
                     </div>
