--- a/templates/newschool.html
+++ b/templates/newschool.html
@@ -16,31 +16,31 @@
             Do you want to decorate your snack by yourself?
             Foodplay held a Cookies Decoration Game at Wework office space!
         </p>
-        <table>
+        <table class="heigh80">
             <tr>
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/newschool/1.png">
                     </div>
                 </td>
 
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/newschool/2.png">
                     </div>
                 </td>
 
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/newschool/3.png">
                     </div>
                 </td>
 
                 <td>
-                    <div class="thumbnail narrow80">
+                    <div class="thumbnail narrow80 heigh80">
 
                         <img src="/static/img/blog/newschool/4.png">
                     </div>
@@ -56,7 +56,7 @@
             Sara said :"I feel very relax because It is a sort of colouring  but instead of worring color in the lines I can just make a mess and just eat it!"
         </p>
     </div>
-    <div class="align-center">
+    <div class="align-center top3 bottom5">
         <iframe width="854" height="480" src="https://www.youtube.com/embed/6Zvi7U9H8gA" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
