--- a/templates/popcake.html
+++ b/templates/popcake.html
@@ -11,25 +11,23 @@
                 </div>
             </div>
         </div>
+
         <div class="col-lg-4">
-            <div class="purple">
+            <div class="purple bottom5">
                 <div class="row">
                     <div class="col-sm-9 vertical-line description">
                         <div class="description">Butter Koekje decoration kit</div>
                     </div>
                     <div class="col-sm-3">
-                        <div class="price">$16</div>
+                        <div class="price">$12</div>
                     </div>
                 </div>
             </div>
-            <div class="quantity">Quantity</div>
-            <div class="input-wrapper">
-                <input type="text">
+
+            <div class="button-wrapper top3 bottom2">
+                <button type="button" class="Add-tocart">Buy</button>
             </div>
 
-            <div class="button-wrapper">
-                <button type="button" class="Add-tocart">Add to cart</button>
-            </div>
 
             <div class="sm-title">
                 <p>We do catering!</p>
