--- a/templates/shop.html
+++ b/templates/shop.html
@@ -55,53 +55,6 @@
 
             <div class="col-lg-4">
                 <div class="shop-card">
-                    <a href="/holiday-cookie">
-                        <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/3.png" class="bottom5">
-                            <div class="caption top3">
-                                <div class="row">
-                                    <div class="col-sm-9 vertical-line description">
-                                        <div class="description">Holiday cookies decoration kit</div>
-                                    </div>
-                                    <div class="col-sm-3 price">
-                                        <p>$10</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="shop-card">
-                    <a href="/plant-cake">
-                        <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/4.png" class="bottom5">
-                            <div class="caption top3">
-                                <div class="row">
-                                    <div class="col-sm-9 vertical-line description">
-                                        <div class="description">Plant cake decoration kit</div>
-                                    </div>
-                                    <div class="col-sm-3 price">
-                                        <p>$18</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-
-            <div class="col-lg-4">
-                <div class="shop-card">
                     <a href="/popcake">
                         <div class="thumbnail narrow90">
                             <img src="/static/img/kit%20list/5.png" class="bottom5">
@@ -120,11 +73,58 @@
                 </div>
             </div>
 
+        </div>
+
+
+
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/plant-cake">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/4.png" class="bottom5 unaval">
+                            <div class="caption top3">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Plant cake decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <p>$18</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="col-lg-4">
+                <div class="shop-card">
+                    <a href="/holiday-cookie">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/3.png" class="bottom5 unaval">
+                            <div class="caption top3">
+                                <div class="row">
+                                    <div class="col-sm-9 vertical-line description">
+                                        <div class="description">Holiday cookies decoration kit</div>
+                                    </div>
+                                    <div class="col-sm-3 price">
+                                        <p>$10</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/Butter-koekje">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/6.png" class="bottom5">
+                            <img src="/static/img/kit%20list/6.png" class="bottom5 unaval">
                             <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
