--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -154,8 +154,8 @@ html, body {
 
 .email-zone{
     font-size: 25px;
-    height: 70px;
-    width: 250px;
+    height: 50px;
+    width: 200px;
     padding: 10px 10px 10px 10px;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -178,7 +178,7 @@ html, body {
 }
 .btn-yy{
     height: 50px;
-    width: 180px;
+    width: 120px;
     border: none;
     background-color: #efaaa9;
     font-size: 24px;
@@ -191,7 +191,7 @@ html, body {
 }
 .yy-blog-title{
     color: #44BDA7;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .yy-theme-color{
@@ -224,7 +224,7 @@ html, body {
 
 .home-shop-button {
     position: absolute;
-    margin-top: -230px;
+    margin-top: -200px;
     margin-left: -100px;
     height:60px;
     width: 200px;
@@ -276,8 +276,8 @@ html, body {
 }
 
 .price{
-    font-size: 22px;
-    padding-top: 6%;
+    font-size: 19px;
+    padding-top: 3%;
     color:purple;
     font-weight: 400;
 }
@@ -300,7 +300,7 @@ html, body {
 }
 .receipt{
     font-weight: 100;
-    font-size: 18px;
+    font-size: 16px;
     float: left;
 }
 
@@ -310,7 +310,7 @@ html, body {
 }
 
 .product-footer{
-    font-size: 20px;
+    font-size: 18px;
 
 }
 
@@ -335,10 +335,10 @@ html, body {
 }
 
 .subtitle{
-    font-size: 23px;
+    font-size: 20px;
 }
 .sm-title{
-    font-size: 20px;
+    font-size: 18px;
     padding-top: 10px;
     padding-bottom: 20px;
     font-weight: 500;
@@ -369,4 +369,8 @@ html, body {
     color: #44BDA7;
     font-size: 20px;
     padding-bottom: 3%;
+}
+
+.unaval{
+	-webkit-filter: grayscale(90%);
 }
