--- a/templates/cheese-cake.html
+++ b/templates/cheese-cake.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class="purple">
+            <div class="purple bottom5">
                 <div class="row">
                     <div class="col-sm-9 vertical-line description">
                         <div class="description">Butter Koekje decoration kit</div>
@@ -22,13 +22,9 @@
                     </div>
                 </div>
             </div>
-            <div class="quantity">Quantity</div>
-            <div class="input-wrapper">
-                <input type="text">
-            </div>
 
-            <div class="button-wrapper">
-                <button type="button" class="Add-tocart">Add to cart</button>
+            <div class="button-wrapper top3 bottom2">
+                <button type="button" class="Add-tocart">Buy</button>
             </div>
 
             <div class="sm-title">
