finish tips.html

--- a/templates/tips.html
+++ b/templates/tips.html
@@ -8,7 +8,9 @@
                     <div class="card yy-card">
                         <div class="thumbnail">
                             <div class="media">
-                                <iframe width="513" height="366" src="https://www.youtube.com/embed/Mu1V2NoAZqI" frameborder="0" allowfullscreen></iframe>
+                                <a href="https://youtu.be/Mu1V2NoAZqI">
+                                    <img src="/static/img/tips/tips1.png"></img>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -18,11 +20,26 @@
                     <div class="card yy-card">
                         <div class="thumbnail">
                             <div class="media">
-                                <iframe width="513" height="366" src="https://www.youtube.com/embed/gaNmZmwdLqY" frameborder="0" allowfullscreen></iframe>
+                                <a href="https://youtu.be/gaNmZmwdLqY">
+                                    <img src="/static/img/tips/tips2.png">
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
+
+            <div class="col-sm-6 align-center">
+                <div class="card yy-card">
+                    <div class="thumbnail">
+                        <div class="media">
+                            <a href="https://youtu.be/gaNmZmwdLqY">
+                                <img src="/static/img/tips/31.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
