update tips page

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -7,8 +7,9 @@
             <tr>
                 <td>
                     <div class="thumbnail narrow80">
-
-                        <img src="/static/img/blog/facebook/1.png">
+			<a href="https://www.instagram.com/explore/tags/superhcookies/">
+                            <img src="/static/img/blog/facebook/1.png">
+			</a>
                     </div>
                 </td>
 
