--- a/templates/tips.html
+++ b/templates/tips.html
@@ -32,7 +32,7 @@
                 <div class="card yy-card">
                     <div class="thumbnail">
                         <div class="media">
-                            <a href="https://youtu.be/gaNmZmwdLqY">
+                            <a href="https://www.youtube.com/channel/UCX1IXEEyH3twH_dwh6X_fAQ">
                                 <img src="/static/img/tips/31.png">
                             </a>
                         </div>
