--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li>
-                        <div class="container-fluid navbar-brand ">
+                        <div class="container-fluid navbar-brand2 ">
                             <a class="nav-brand" href="home">
                                 <img alt="Brand" class="brand-yy" src="{% static "img/Dessert Decor1.png" %}">
                             </a>
