--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -215,7 +215,10 @@ html, body {
 .navbar-brand2 {
     float: right;
     height: 50px;
-    padding: 15px 15px;
+    padding-top: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 5px;
     font-size: 18px;
     line-height: 20px;
 }
