--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -6,17 +6,18 @@
         <table>
             <tr>
                 <td>
-                    <div class="thumbnail narrow80">
-			<a href="https://www.instagram.com/explore/tags/superhcookies/">
-                            <img src="/static/img/blog/facebook/1.png">
-			</a>
+                    <div class="thumbnail narrow80 top3">
+                        <a href="https://www.instagram.com/explore/tags/superhcookies/">
+                            <img  class="narrow80" src="/static/img/challenges/1.png">
+                        </a>
                     </div>
                 </td>
 
                 <td>
-                    <div class="thumbnail narrow80">
-
-                        <img src="/static/img/blog/facebook/2.png">
+                    <div class="thumbnail narrow80 top3">
+                        <a href="">
+                        <img  class="narrow80" src="/static/img/challenges/2.png">
+                        </a>
                     </div>
                 </td>
 
