work with challenges

--- a/templates/join.html
+++ b/templates/join.html
@@ -1,6 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="">
+    <div class="frame2">
+        <div class="align-center">
+            <p class="bottom2">"THE HOT NEW TREND"</p>
+            <p class="bottom2">SELF-DECORATED DESSERT AS A GIFT?</p>
+            <p >YOU CAN DO IT!</p>
+        </div>
+    </div>
+</div>
 
-    <h1>To Be Done</h1>
+<div class="align-center yy-content">
+    <div class="container sign-up top3 bottom2">
+        <div class="sign-up">
+            <p>Sign up for DESSERT DECOR awesomeness!</p>
+        </div>
+    </div>
+    <div class="container bottom5 ">
+        <div class="middle-panel">
+            <input type="text" class="email-zone2" placeholder="Email address">
+            <button type="button" class="btn-yy top1px" >Start</button>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
