--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,92 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="content-block">
-        <p> We are Food Play!!!</p>
+    <div class="first_frame bottom2">
+        <span>
+            <img  class="frame non-padding" src="/static/img/kit%20list/pic1.png">
+        </span>
     </div>
+    <div class="narrow80">
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="thumbnail shop-detail-left">
+                    <img src="/static/img/about/1.png">
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="about-title">
+                    <p>We offer basic tutorial</p>
+                </div>
+                <div class="about-content">
+                    <p>
+                        We will keep updating simple/basic tips of how to make culinary art easily. It will be helpful to help you improve your plating skill.
+                    </p>
+                </div>
+
+                <div class="about-button align-center">
+                    <a href="/tips" class="orange-color">
+                    View Tips
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="row">
+
+            <div class="col-sm-6">
+                <div class="about-title">
+                    <p>Our creative competition</p>
+                </div>
+                <div class="about-content">
+                    <p>
+                        We will send different challenges every week. Those challenges will be focus on food visual aesthetic and topics woudld comes from  recent news, recent holidays, etc.
+                    </p>
+                </div>
+
+                <div class="about-button align-center">
+                    <a href="/challenges" class="orange-color">
+                    View Challenges
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="thumbnail shop-detail-right">
+                    <img src="/static/img/about/2.png">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="thumbnail shop-detail-left">
+                    <img src="/static/img/about/3.png">
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="about-title">
+                    <p>Keep in touch</p>
+                </div>
+                <div class="about-content">
+                    <p>
+                        Based on social media community, we will allow you to keep in close touch with all your online friends, family and just about anyone you want, see and share each other’s amazing creations
+                    </p>
+                </div>
+
+                <div class="about-button align-center">
+                    <a href="/tips" class="orange-color">
+                    View Tips
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 {% endblock %}
