--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 <div class="row narrow80 heigh90">
     <div class="col-sm-6">
 
-    <img src="/static/img/home/why.png" class="frame">
+    <img src="/static/img/home/ppp.png" class="frame">
     </div>
     <div class="col-sm-6">
     <img src="/static/img/home/pic1.png" class="frame">
