work with challenges

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,11 +5,11 @@
             <img  class="frame non-padding" src="/static/img/kit%20list/pic1.png">
         </span>
     </div>
-    <div class="narrow80">
+    <div class="narrow76">
 
         <div class="row">
             <div class="col-sm-6">
-                <div class="thumbnail shop-detail-left">
+                <div class="thumbnail shop-detail-left2">
                     <img src="/static/img/about/1.png">
                 </div>
             </div>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="thumbnail shop-detail-right">
+                <div class="thumbnail shop-detail-right2">
                     <img src="/static/img/about/2.png">
                 </div>
             </div>
@@ -63,7 +63,7 @@
 
         <div class="row">
             <div class="col-sm-6">
-                <div class="thumbnail shop-detail-left">
+                <div class="thumbnail shop-detail-left2">
                     <img src="/static/img/about/3.png">
                 </div>
             </div>
