--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -307,6 +307,13 @@ html, body {
     padding-left: 20%;
 }
 
+.shop-detail-left2{
+    padding-right: 25%;
+}
+.shop-detail-right2{
+    padding-left: 25%;
+}
+
 
 .shop-detail{
     padding-left: 10%;
