--- a/templates/pay.html
+++ b/templates/pay.html
@@ -8,5 +8,5 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">check out</button>
     </form>
-
+    {{ info }}
 {% endblock %}
