work with challenges

--- a/templates/cheese-cake.html
+++ b/templates/cheese-cake.html
@@ -24,8 +24,9 @@
             </div>
 
             <div class="button-wrapper top3 bottom2">
-                <button type="button" class="Add-tocart">Buy</button>
+                <a type="button" class="Add-tocart" href="/pay?id=1">Buy</a>
             </div>
+
 
             <div class="sm-title">
                 <p>We do catering!</p>
