--- a/templates/flowers-cookies.html
+++ b/templates/flowers-cookies.html
@@ -15,16 +15,18 @@
             <div class="purple bottom5">
                 <div class="row">
                     <div class="col-sm-9 vertical-line description">
-                        <div class="description">Butter Koekje decoration kit</div>
+                        <div class="description">Icing Butter Cookie decoration kit</div>
                     </div>
+
                     <div class="col-sm-3">
-                        <div class="price">$12</div>
+                        <div class="price">$8</div>
                     </div>
                 </div>
             </div>
 
+
             <div class="button-wrapper top3 bottom2">
-                <button type="button" class="Add-tocart">Buy</button>
+                <a type="button" class="Add-tocart" href="/pay?id=2">Buy</a>
             </div>
 
 
