--- a/templates/pay.html
+++ b/templates/pay.html
@@ -9,7 +9,7 @@
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">check out</button>
+        <button type="submit" class="Add-tocart">check out</button>
     </form>
 
 
